# answer-fastcgi

./: CMakeLists.txt
examples/: CMakeLists.txt  authorizer.cpp  database.cpp  echo.cpp  showgnu.cpp  timer.cpp  upload.cpp  utf8-helloworld.cpp
include/: utf8_codecvt_facet.hpp
include/asql/: data.hpp
include/fastcgi++/: config.h.in  fcgistream.hpp  http.hpp  protocol.hpp  request.hpp
src/: fcgistream.cpp  http.cpp  manager.cpp  mysql.cpp  protocol.cpp  request.cpp  transceiver.cpp
